# printCAD

./: Cargo.toml  PROJECT_STEPS.md  README.md  cube-Body.stl
crates/app_shell/: Cargo.toml
crates/app_shell/src/: camera.rs  log_panel.rs  main.rs  old_cube.rs  orientation_cube.rs  own_imp_cube.rs  ui_layer.rs
crates/app_shell/src/camera/: controller.rs  input.rs  mod.rs  orbit.rs
crates/app_shell/src/orientation_cube/: mod.rs
crates/app_shell/src/ui/: feature_tree.rs  layout.rs  mod.rs  settings.rs  settings_panel.rs
crates/axes/: Cargo.toml
crates/axes/src/: lib.rs
crates/core_document/: Cargo.toml
crates/core_document/src/: asset.rs  feature.rs  lib.rs  registration.rs  runtime.rs
crates/kernel_api/: Cargo.toml
crates/kernel_api/src/: lib.rs
crates/kernel_occt/: Cargo.toml
crates/kernel_occt/src/: lib.rs
crates/render_vk/: Cargo.toml  build.rs
crates/render_vk/shaders/: mesh.frag  mesh.vert  pick.frag  pick.vert
crates/render_vk/src/: core.rs  lib.rs  mesh.rs  picking.rs  surface.rs  util.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/wb_part/: Cargo.toml
crates/wb_part/src/: lib.rs
crates/wb_sketch/: Cargo.toml
crates/wb_sketch/src/: lib.rs
crates/workbenches/: Cargo.toml
crates/workbenches/src/: lib.rs
crates/workbenches/wb_part/: Cargo.toml
crates/workbenches/wb_part/src/: lib.rs
crates/workbenches/wb_sketch/: Cargo.toml
crates/workbenches/wb_sketch/src/: feature.rs  lib.rs  render.rs  sketch.rs
docs/: DOCUMENT_MODEL.md  WB_IMP.md  WORKBENCH_GUIDE.md  plan.md
