[package]
name = "app_shell"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
core_document = { path = "../core_document", features = ["egui"] }
render_vk = { path = "../render_vk" }
tracing.workspace = true
tracing-subscriber.workspace = true
winit.workspace = true
egui.workspace = true
egui-winit.workspace = true
wb_part = { path = "../workbenches/wb_part", features = ["egui"] }
wb_sketch = { path = "../workbenches/wb_sketch", features = ["egui"] }
kernel_api = { path = "../kernel_api" }
settings = { path = "../settings" }
glam.workspace = true
uuid.workspace = true
axes = { path = "../axes" }
resvg = "0.41"
usvg = "0.41"
tiny-skia = "0.11"
