[package]
name = "core_document"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
egui = ["dep:egui"]

[dependencies]
serde.workspace = true
thiserror.workspace = true
serde_json.workspace = true
uuid.workspace = true
egui = { workspace = true, optional = true }
