[package]
name = "wb_sketch"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["egui"]
egui = ["core_document/egui", "dep:egui"]

[dependencies]
core_document = { path = "../../core_document" }
egui = { workspace = true, optional = true }
glam.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
kernel_api = { path = "../../kernel_api" }
